# ReazonSpeech

./: Copy_of_ReazonSpeech_v2_0_en.ipynb
colab/: ReazonSpeech_v2_0_k2.ipynb
pkg/k2-asr/: pyproject.toml
pkg/k2-asr/src/: test.py  transcribe.py
pkg/tmp/src/: audio.py  offline-decode-files.py
